Fix alignment for tabs with different content height

--- a/rundeckapp/grails-spa/packages/ui-trellis/src/components/containers/tabs/tabs-standard.scss
+++ b/rundeckapp/grails-spa/packages/ui-trellis/src/components/containers/tabs/tabs-standard.scss
@@ -46,6 +46,9 @@
 
     .rdtabs__tab {
         position: relative;
+        display: flex;
+        align-items: center;
+        height: 100%;
         // border: 1px solid black;
         font-weight: 700;
         color: #66615b;
